tests/valid/trait/assoc_projection_enum_payload_compat.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

enum Slot {
  Full(unrestricted <unrestricted isize as Iterator>::Item)
}

fn main() -> unrestricted Slot {
  Slot::Full(1)
}
