tests/invalid/trait/assoc_projection_trait_lifetime_arg.facet
trait Provider {
  type Item;
}

impl Provider for unrestricted isize {
  type Item = unrestricted isize;
}

fn main<'a>() -> unrestricted <unrestricted isize as Provider<'a>>::Item {
  1
}
